# kdata2

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  Makefile.am  README  configure.ac  kdata2.c  kdata2.h  log.c  test.c  uuid4.h  yddaemon.h
kdata2.xcodeproj/: project.pbxproj
modules/yandexdisk/: base64.h  download.c  init.c  internal.h  struct.h  upload.c  yandexdisk.h
